@@ -288,7 +288,7 @@ public:
   
   void delete_existing_revs_and_certs();
 
-  void delete_existing_revs_and_certs(std::string const & rid);
+  void delete_existing_rev_and_certs(revision_id const & rid);
 
   // crypto key / cert operations
 
